# pegitan

./: Cargo.toml  README.md
src/: lib.rs
src/algorithms/: mod.rs  palindrome.rs  sorting.rs
src/april_2020_challenge/: day_1.rs
src/contest/: mod.rs  problem_5425.rs  problem_5426.rs
src/cs6006/: mod.rs  peak_finder.rs
src/data_structures/: list_node.rs
src/leetcode/: mod.rs  problem_1021.rs  problem_1025.rs  problem_11.rs  problem_1108.rs  problem_13.rs  problem_1464.rs  problem_1465.rs  problem_1466.rs  problem_15.rs  problem_16.rs  problem_218.rs  problem_27.rs  problem_322.rs  problem_343.rs  problem_392.rs  problem_416.rs  problem_5.rs  problem_6.rs  problem_7.rs  problem_71.rs  problem_8.rs  problem_9.rs  problem_904.rs  problem_922.rs  problem_96.rs
