[package]
name = "pegitan"
version = "0.1.0"
authors = ["Hanif Bin Ariffin <hanif.ariffin.4326@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/hbina/pegitan"
description = "A bunch of random algorithms library."
keywords = ["libary", "algorithms"]
categories = ["data-structures"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
